--- a/src/dispersion_plot_form.ui
+++ b/src/dispersion_plot_form.ui
@@ -53,7 +53,7 @@
    <item row="2" column="0" colspan="2">
     <widget class="QPushButton" name="pushButton_Clear">
      <property name="sizePolicy">
-      <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+      <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
        <horstretch>0</horstretch>
        <verstretch>0</verstretch>
       </sizepolicy>
@@ -66,7 +66,7 @@
    <item row="0" column="0" colspan="2">
     <widget class="QToolBox" name="toolBox">
      <property name="sizePolicy">
-      <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
+      <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
        <horstretch>0</horstretch>
        <verstretch>0</verstretch>
       </sizepolicy>
@@ -282,7 +282,7 @@
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>310</width>
+        <width>280</width>
         <height>385</height>
        </rect>
       </property>
@@ -306,7 +306,7 @@
        <item>
         <widget class="QComboBox" name="comboBox_Formula">
          <property name="sizePolicy">
-          <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+          <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
            <horstretch>0</horstretch>
            <verstretch>0</verstretch>
           </sizepolicy>
@@ -316,7 +316,7 @@
        <item>
         <widget class="QTableWidget" name="tableWidget_Coefs">
          <property name="sizePolicy">
-          <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
+          <sizepolicy hsizetype="Minimum" vsizetype="Expanding">
            <horstretch>0</horstretch>
            <verstretch>0</verstretch>
           </sizepolicy>
