--- a/src/curve_fitting_dialog.ui
+++ b/src/curve_fitting_dialog.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>307</width>
+    <width>310</width>
     <height>379</height>
    </rect>
   </property>
@@ -68,7 +68,7 @@
       </sizepolicy>
      </property>
      <property name="text">
-      <string>Add Row</string>
+      <string>Add Empty Row</string>
      </property>
     </widget>
    </item>
@@ -83,6 +83,13 @@
     </widget>
    </item>
    <item row="5" column="1">
+    <widget class="QPushButton" name="pushButton_AddGlass">
+     <property name="text">
+      <string>Add Glass</string>
+     </property>
+    </widget>
+   </item>
+   <item row="6" column="0">
     <widget class="QPushButton" name="pushButton_DeleteRow">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
@@ -91,7 +98,7 @@
       </sizepolicy>
      </property>
      <property name="text">
-      <string>Delete Selected Row</string>
+      <string>Delete Row</string>
      </property>
     </widget>
    </item>
