--- a/src/preference_dialog.ui
+++ b/src/preference_dialog.ui
@@ -51,7 +51,7 @@
        </widget>
       </item>
       <item row="1" column="1" colspan="3">
-       <widget class="QListWidget" name="listWidget_DefaultFiels"/>
+       <widget class="QListWidget" name="listWidget_DefaultFiles"/>
       </item>
       <item row="0" column="3">
        <widget class="QPushButton" name="pushButton_Clear">
