--- a/src/main_window.ui
+++ b/src/main_window.ui
@@ -144,7 +144,7 @@
   </action>
   <action name="action_CatalogView">
    <property name="text">
-    <string>Catalog View</string>
+    <string>Catalog Table</string>
    </property>
   </action>
   <action name="action_loadXML">
