--- a/src/dispersion_plot_form.ui
+++ b/src/dispersion_plot_form.ui
@@ -44,7 +44,7 @@
       </attribute>
       <layout class="QGridLayout" name="gridLayout_5">
        <item row="0" column="0">
-        <widget class="QTableWidget" name="tableWidget"/>
+        <widget class="QCustomTableWidget" name="tableWidget"/>
        </item>
       </layout>
      </widget>
@@ -348,6 +348,11 @@
    <extends>QWidget</extends>
    <header>QCustomPlot/qcustomplot.h</header>
    <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>QCustomTableWidget</class>
+   <extends>QTableWidget</extends>
+   <header>src/qcustomtablewidget.h</header>
   </customwidget>
  </customwidgets>
  <resources/>
